test/errors/types/foreach_ref_type_mismatch_fail.hy
int[] numbers = [1, 2, 3]

void foreachRefTypeMismatch()
{
    for ref float value in numbers
    {
        value += 1.0
    }
}